tests/snapshots/transform__referenced_arrow_var_declarator.snap
---
source: tests/transform.rs
expression: output
---
const _worklet_12404887720670_init_data = {
	code: "(function null1(){return{};})",
	location: "/dev/null",
	sourceMap: "{\"version\":3,\"names\":[],\"sources\":[\"/dev/null\"],\"sourcesContent\":[\"(function null1(){return{}});\"],\"mappings\":\"CAAC,SAAS,OAAO,CAAC,MAAM,EAAE\"}"
};
let styleFactory = function null1Factory({ _worklet_12404887720670_init_data }) {
	const _e = [
		new global.Error(),
		1,
		-27
	];
	const null1 = function() {
		return {};
	};
	null1.__closure = {};
	null1.__workletHash = 0xb483ced12de;
	null1.__pluginVersion = "x.y.z";
	null1.__initData = _worklet_12404887720670_init_data;
	null1.__stackDetails = _e;
	return null1;
}({ _worklet_12404887720670_init_data });
const animatedStyle = useAnimatedStyle(styleFactory);
