tests/snapshots/transform__referenced_func_declaration.snap
---
source: tests/transform.rs
expression: output
---
const _worklet_9076365995074_init_data = {
	code: "(function styleFactory_null1(){return{};})",
	location: "/dev/null",
	sourceMap: "{\"version\":3,\"names\":[],\"sources\":[\"/dev/null\"],\"sourcesContent\":[\"(function styleFactory_null1(){return{}});\"],\"mappings\":\"CAAC,SAAS,oBAAoB,CAAC,MAAM,EAAE\"}"
};
const styleFactory = function styleFactory_null1Factory({ _worklet_9076365995074_init_data }) {
	const _e = [
		new global.Error(),
		1,
		-27
	];
	const styleFactory = function() {
		return {};
	};
	styleFactory.__closure = {};
	styleFactory.__workletHash = 9076365995074;
	styleFactory.__pluginVersion = "x.y.z";
	styleFactory.__initData = _worklet_9076365995074_init_data;
	styleFactory.__stackDetails = _e;
	return styleFactory;
}({ _worklet_9076365995074_init_data });
const animatedStyle = useAnimatedStyle(styleFactory);
