tests/snapshots/transform__referenced_object_var.snap
---
source: tests/transform.rs
expression: output
---
const _worklet_15695285586601_init_data = {
	code: "(function null1(){})",
	location: "/dev/null",
	sourceMap: "{\"version\":3,\"names\":[],\"sources\":[\"/dev/null\"],\"sourcesContent\":[\"(function null1(){});\"],\"mappings\":\"CAAC,SAAS,OAAO\"}"
};
let handler = { onScroll: function null1Factory({ _worklet_15695285586601_init_data }) {
	const _e = [
		new global.Error(),
		1,
		-27
	];
	const null1 = function() {};
	null1.__closure = {};
	null1.__workletHash = 0xe4657ec0aa9;
	null1.__pluginVersion = "x.y.z";
	null1.__initData = _worklet_15695285586601_init_data;
	null1.__stackDetails = _e;
	return null1;
}({ _worklet_15695285586601_init_data }) };
const scrollHandler = useAnimatedScrollHandler(handler);
