tests/snapshots/transform__var_in_catch_block_not_captured.snap
---
source: tests/transform.rs
expression: output
---
const _worklet_3019361411460_init_data = {
	code: "(function foo_null1(){const{doSomething}=this.__closure;try{doSomething()}catch(error){if(globalThis.handler){var message=error.message,stack=error.stack;globalThis.handler(message,stack)}}})",
	location: "/dev/null"
};
const foo = function foo_null1Factory({ _worklet_3019361411460_init_data, doSomething }) {
	const _e = [
		new global.Error(),
		-2,
		-27
	];
	const foo = function() {
		try {
			doSomething();
		} catch (error) {
			if (globalThis.handler) {
				var message = error.message, stack = error.stack;
				globalThis.handler(message, stack);
			}
		}
	};
	foo.__closure = { doSomething };
	foo.__workletHash = 3019361411460;
	foo.__pluginVersion = "x.y.z";
	foo.__initData = _worklet_3019361411460_init_data;
	foo.__stackDetails = _e;
	return foo;
}({
	_worklet_3019361411460_init_data,
	doSomething
});
