tests/snapshots/transform__worklet_arrow_in_call_argument.snap
---
source: tests/transform.rs
expression: output
---
const _worklet_8297063030096_init_data = {
	code: "(function null1(){return 1+2;})",
	location: "/dev/null",
	sourceMap: "{\"version\":3,\"names\":[],\"sources\":[\"/dev/null\"],\"sourcesContent\":[\"(function null1(){return 1+2});\"],\"mappings\":\"CAAC,SAAS,OAAO,CAAC,MAAO,GAAE\"}"
};
const result = someCall(wrapFn(function null1Factory({ _worklet_8297063030096_init_data }) {
	const _e = [
		new global.Error(),
		1,
		-27
	];
	const null1 = function() {
		return 1 + 2;
	};
	null1.__closure = {};
	null1.__workletHash = 8297063030096;
	null1.__pluginVersion = "x.y.z";
	null1.__initData = _worklet_8297063030096_init_data;
	null1.__stackDetails = _e;
	return null1;
}({ _worklet_8297063030096_init_data })));
