tests/snapshots/transform__worklet_async.snap
---
source: tests/transform.rs
expression: output
---
const _worklet_11527789230625_init_data = {
	code: "(async function foo_null1(){const{bar}=this.__closure;await bar()})",
	location: "/dev/null"
};
const foo = function foo_null1Factory({ _worklet_11527789230625_init_data, bar }) {
	const _e = [
		new global.Error(),
		-2,
		-27
	];
	const foo = async function() {
		await bar();
	};
	foo.__closure = { bar };
	foo.__workletHash = 0xa7c05c83a21;
	foo.__pluginVersion = "x.y.z";
	foo.__initData = _worklet_11527789230625_init_data;
	foo.__stackDetails = _e;
	return foo;
}({
	_worklet_11527789230625_init_data,
	bar
});
